--- a/src/properties/mc.properties
+++ b/src/properties/mc.properties
@@ -102,4 +102,4 @@ pg.commission.iche2=275
 pg.commission.virtual=440
 pg.commission.hp=5
 
-
+vpay.url.midChk=http://localhost:8072/credit/pay/midChk
