기프트밴드 중간 커밋

--- a/src/properties/mc.properties
+++ b/src/properties/mc.properties
@@ -102,4 +102,6 @@ pg.commission.iche2=275
 pg.commission.virtual=440
 pg.commission.hp=5
 
+#vpay 가상계좌 관련 api
 vpay.url.midChk=http://localhost:8072/credit/pay/midChk
+vpay.url.acctReq=http://localhost:8072/credit/pay/acctReq
