--- a/src/properties/mc.properties
+++ b/src/properties/mc.properties
@@ -31,9 +31,10 @@ dev.jdbc.password=giftband!!11
 
 #\uc6b4\uc601 DB
 real.jdbc.driver=oracle.jdbc.driver.OracleDriver
-real.jdbc.url=jdbc:oracle:thin:@175.124.227.134:1522:PTMOA
-real.jdbc.username=partsmoa
-real.jdbc.password=partsmoa2580
+real.jdbc.url=jdbc:oracle:thin:@dev.jhpick.com:1521:orcl
+real.jdbc.username=giftband
+real.jdbc.password=giftband!!11
+
 
 #ERP \uac1c\ubc1c
 dev_erp.jdbc.driver=oracle.jdbc.driver.OracleDriver
@@ -103,5 +104,7 @@ pg.commission.virtual=440
 pg.commission.hp=5
 
 #vpay 가상계좌 관련 api
-vpay.url.midChk=http://localhost:8072/credit/pay/midChk
-vpay.url.acctReq=http://localhost:8072/credit/pay/acctReq
+vpay.dev.url.midChk=http://localhost:8072/credit/pay/midChk
+vpay.dev.url.acctReq=http://localhost:8072/credit/pay/acctReq
+vpay.prod.url.midChk=http://credit.v-pay.co.kr/credit/pay/midChk
+vpay.prod.url.acctReq=http://credit.v-pay.co.kr/credit/pay/acctReq
