기프트밴드 중간 커

--- a/src/properties/mc.properties
+++ b/src/properties/mc.properties
@@ -108,3 +108,9 @@ vpay.dev.url.midChk=http://localhost:8072/credit/pay/midChk
 vpay.dev.url.acctReq=http://localhost:8072/credit/pay/acctReq
 vpay.prod.url.midChk=http://credit.v-pay.co.kr/credit/pay/midChk
 vpay.prod.url.acctReq=http://credit.v-pay.co.kr/credit/pay/acctReq
+
+#Aligo SMS
+aligo.user_id=wnsgh901
+aligo.key=u0uehtnywy28w7e5mdds0x1f8as4epty
+aligo.sender=1661-8431
+aligo.kakao.senderkey=32858d019dfb09be2d8c23d05a294227e1d2371a
