--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -71,6 +71,17 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  
+  <jsp-config>
+	<taglib>
+		<taglib-uri>/WEB-INF/tlds/DateUtil_fn.tld</taglib-uri>
+		<taglib-location>/WEB-INF/tlds/DateUtil_fn.tld</taglib-location>
+		<taglib-uri>/WEB-INF/tlds/StringUtil_fn.tld</taglib-uri>
+		<taglib-location>/WEB-INF/tlds/StringUtil_fn.tld</taglib-location>
+	</taglib>
+  </jsp-config>
+  
+  
   <session-config>
     <session-timeout>120</session-timeout>
   </session-config>
