--- a/src/properties/mc.properties
+++ b/src/properties/mc.properties
@@ -16,22 +16,23 @@
 # \uc6b4\uc601\uc11c\ubc84 \ud0c0\uc785(WINDOWS, UNIX)
 #Globals.OsType = WINDOWS
 
-#develope=real
-develope=dev
+develope=real
+#develope=dev
  
 # \uacbd\ub85c
 #home.url=http://www.partsmoa.co.kr
-home.url=http://localhost:8081
+#home.url=http://localhost:8081
+home.url=http://giftband.co.kr
 
 #\uac1c\ubc1c DB
 dev.jdbc.driver=oracle.jdbc.driver.OracleDriver
-dev.jdbc.url=jdbc:oracle:thin:@dev.jhpick.com:1521:orcl
+dev.jdbc.url=jdbc:oracle:thin:@125.133.186.112:1521:orcl
 dev.jdbc.username=giftband
 dev.jdbc.password=giftband!!11
 
 #\uc6b4\uc601 DB
 real.jdbc.driver=oracle.jdbc.driver.OracleDriver
-real.jdbc.url=jdbc:oracle:thin:@dev.jhpick.com:1521:orcl
+real.jdbc.url=jdbc:oracle:thin:@125.133.186.112:1521:orcl
 real.jdbc.username=giftband
 real.jdbc.password=giftband!!11
 
