--- a/src/properties/log4j.properties
+++ b/src/properties/log4j.properties
@@ -22,7 +22,7 @@
 
 
 #log4j.rootLogger=console, debug, error
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=error, stdout
 
 # ------------------------------------------------------- Appender console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
